[package]
name = "pms-7003"
version = "0.3.0"
authors = ["Grzegorz Bartoszek <grze.bartoszek@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/g-bartoszek/pms-7003"
description = "Rust interface for PMS 7003 air quality sensor"

[dependencies]
rp2040-hal = "0.4.0"
embedded-hal = "0.2.3"
embedded-time = "0.12.0"
nb = "0.1.2"

[dev-dependencies]
linux-embedded-hal = "0.3.0"
